Removing old IE comments and adding old IE banner

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,7 +3,7 @@
    ====================================================================================== */
 
 /*
-  This stylesheet imports all Sass partials which is compiled to: 'application.css' which is then loaded from the HTML Head. Old IE (IE < 9) imports this stylesheet along with all it's partials in order to support CSS within media queries. Using IE conditional comments in the HTML Head allows us to only load the one style sheet for Old IE: 'old-ie.css' and ignore 'application.css' and vice versa for the main stylesheet.
+  This stylesheet imports all Sass partials which is compiled to: 'application.css' which is then loaded from the HTML Head.
 
   Partial dir structure:
     - UTILS.................generic utility styles and Sass settings e.g. mixins.
@@ -78,6 +78,7 @@
 @import "partials/layout/header";
 @import "partials/layout/national";
 @import "partials/layout/redirection";
+@import "partials/layout/old-ie-banner";
 
   /* Layout -> Grid */
   @import "partials/layout/grid/grid";
