Removing all instances of .ie in Sass partials

--- a/app/assets/stylesheets/partials/buttons/_site-feedback.scss
+++ b/app/assets/stylesheets/partials/buttons/_site-feedback.scss
@@ -30,8 +30,8 @@
 	/* IE10 */
 	@include ie-10-up {display: none;}
 
-	/* IE 8/9, non JS and Android users */
-	.ie &,
+	/* IE 9, non JS and Android users */
+	.ie-9 &,
 	.no-js &,
 	.android & {display: none;}
 }
