--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -1,6 +1,6 @@
 <!doctype html>
-<!--[if (IE 9) & (!IEMobile)]>    <html class="no-js ie-9 ie" lang="en-au">    <![endif]-->
-<!--[if gt IE 8]><!-->            <html class="no-js" lang="en-au">            <!--<![endif]-->
+<!--[if (IE 9) & (!IEMobile)]>    <html class="no-js ie-9" lang="en-au">    <![endif]-->
+<!--[if gt IE 8]><!-->            <html class="no-js" lang="en-au">         <!--<![endif]-->
 <head>
   <!--[if !IE]><base href="/"><![endif]-->
   <!--[if lte IE 9]><base href="<%= request.path %>"><![endif]-->
@@ -36,12 +36,6 @@
   <%= yield :custom_styles %>
 
   <%= javascript_include_tag "vendor/modernizr.min" %>
-
-  <%# Old IE HTML5 shiv (IE < 9) %>
-  <!--[if (lt IE 9) & (!IEMobile)]>
-    <%= javascript_include_tag "html5shiv/src/html5shiv-printshiv.js" %>
-  <![endif]-->
-  <%# //Old IE HTML5 shiv (IE < 9) %>
 
   <%# IE 10+ tile icon: http://blogs.msdn.com/b/ie/archive/2012/06/08/high-quality-visuals-for-pinned-sites-in-windows-8.aspx %>
   <meta name="msapplication-TileColor" content="#da291c">
