Removing IE conditional comments from html elems

--- a/app/views/layouts/server_errors.html.erb
+++ b/app/views/layouts/server_errors.html.erb
@@ -1,6 +1,5 @@
 <!doctype html>
-<!--[if (lt IE 9) & (!IEMobile)]> <html class="old-ie ie" lang="en-au">   <![endif]-->
-<!--[if gt IE 8]><!-->            <html lang="en-au">                     <!--<![endif]-->
+<html lang="en-au">
 <head>
 
   <meta charset="utf-8">
