--- a/app/assets/stylesheets/partials/modules/_no-content-fallback-msg.scss
+++ b/app/assets/stylesheets/partials/modules/_no-content-fallback-msg.scss
@@ -11,7 +11,6 @@
 */
 
 .no-content-fallback-msg {
-  text-align: center;
   @include to-rem(padding-top, 62);
 
   @include respond-min($non-palm) {
@@ -30,6 +29,8 @@
     @include to-rem(max-width, $drop-down-width);
   }
 
+  p {text-align: center;}
+
     /* 'No content/search results' text */
     em {
       text-transform: uppercase;
@@ -38,17 +39,18 @@
       @include to-rem(margin-top, $spacing-half);
     }
 
+
     /* 'See nearby centres' text */
     p > span {color: $color-txt-dark;}
 }
 
-  .no-content-fallback-msg__icon:before {
-    @include font-size(48, 1);
-
-    @include respond-min($non-palm) {
-      @include font-size(60, 1);
-    }
-  }
-
 /* Modifier: remove top padding */
 .no-content-fallback-msg--flush {padding-top: 0;}
+
+    .no-content-fallback-msg__icon:before {
+      @include font-size(48, 1);
+
+      @include respond-min($non-palm) {
+        @include font-size(60, 1);
+      }
+    }
