Removing SVG fallback

--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -18,7 +18,7 @@
     <div class="container container--position">
 
       <%# Logo %>
-      <%= image_tag image_path('logo-beta.svg'), alt: 'Westfield', "data-svg-fallback" => image_path('logo-beta.png'), class: 'national__logo' %>
+      <%= image_tag 'logo-beta.svg', alt: 'Westfield', class: 'national__logo' %>
       <%# //Logo %>
 
       <%# Hero heading wrap %>
