--- a/app/views/products/_national_view_dialog.html.erb
+++ b/app/views/products/_national_view_dialog.html.erb
@@ -3,7 +3,7 @@
 
   <%# Logo and heading %>
   <div class="dialog__logo dialog__mrg-base">
-    <%= site_logo %>
+    <%= image_tag 'logo-beta.svg', alt: 'Westfield' %>
   </div>
   <h1 id="dialog-desc" class="dialog__mrg-base">Want to shop local? Choose your nearest Westfield centre</h1>
   <%# //Logo and heading %>
