--- a/app/views/products/redirection.html.erb
+++ b/app/views/products/redirection.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 
   <%# Logo %>
-  <%= site_logo %>
+  <%= image_tag 'logo-beta.svg', alt: 'Westfield' %>
   <%# //Logo %>
 
   <%# Redirect message %>
